--- a/index.html
+++ b/index.html
@@ -288,14 +288,14 @@
       </div>
     </section>
 
-    <!-- EUvsVirus-->
+    <!-- Voluteering-->
     <section style="border-top:2px solid #eee"
-      class="bg-white mb-8 font-sans container max-w-xl m-auto flex flex-col lg:flex-row text-center lg:text-left sm:items-center">
-      <div class="w-full lg:w-1/2">
-        <img class="shadow-md rounded" src="./euvsvirus.png" alt="" />
-      </div>
+      class="bg-white font-sans container max-w-xl mx-auto flex flex-col lg:flex-row justify-center items-center">
+    <label for="tagline" class="uppercase mt-6 tracking-wide text-grey-dark font-bold">Volunteering</label>
+    </section>
+    <section
+      class="bg-white mb-8 font-sans container max-w-xl mx-auto flex flex-col lg:flex-row text-center lg:text-left lg:items-start sm:items-center">
       <div class="w-full lg:w-1/2 flex flex-col justify-center items-start p-8 items-center lg:items-start">
-        <label for="tagline" class="uppercase tracking-wide text-grey-dark font-bold">Volunteering</label>
         <h2 class="my-4 font-normal font-bold">
           <img class="my-2" style="height: 2.2em; vertical-align: middle;" src="./European_Commission.png"
             alt="natural language processing">
@@ -318,13 +318,7 @@
           </a>
         </p>
       </div>
-    </section>
-
-    <!-- Data4Good -->
-    <section
-      class=" bg-white my-8 pt-8 font-sans container max-w-xl m-auto flex flex-col-reverse lg:flex-row text-center lg:text-left sm:items-center">
       <div class="w-full lg:w-1/2 flex flex-col justify-center items-start p-8 items-center lg:items-start">
-        <label for="tagline" class="uppercase tracking-wide text-grey-dark font-bold">Volunteering</label>
         <img class="my-4" style="height: 3em;" src="./d4g.png" alt="natural language processing">
 
         <p class="leading-normal mb-4 text-grey-darkest">
@@ -334,10 +328,9 @@
           <br><br>
         </p>
       </div>
-      <div class="w-full lg:w-1/2">
-        <img src="./d4g.jpg" class="shadow-md rounded" alt="" />
-      </div>
     </section>
+
+
   </div>
 
   <footer class="font-sans bg-white pb-8 px-4" style="z-index: 4">
