--- a/index.html
+++ b/index.html
@@ -306,14 +306,14 @@
           investors across Europe in order to develop innovative solutions for coronavirus-related challenges.
           <br><br>
 
-          <a class="btn bg-white border cursor-pointer no-underline text-grey-darkest font-bold py-2 px-4 mb-2 rounded-full shadow-md md:shadow items-center"
+          <a class="bg-white cursor-pointer no-underline mb-2 items-center"
             href="https://devpost.com/software/bites-of-culture" target="_blank"
-            style="white-space: nowrap; border-color: blue;">
+            style="white-space: nowrap; color: blue;">
             <span style="white-space: nowrap;"> My Devpost Project </span>
           </a>
           &nbsp;
-          <a class="btn bg-white border cursor-pointer no-underline text-grey-darkest font-bold py-2 px-4 mb-2 rounded-full shadow-md md:shadow items-center"
-            href="https://www.euvsvirus.org/" target="_blank" style="white-space: nowrap; border-color: blue;">
+          <a class="bg-white cursor-pointer no-underline mb-2 items-center"
+            href="https://www.euvsvirus.org/" target="_blank" style="white-space: nowrap; color: blue;">
             <span style="white-space: nowrap;"> Hackathon Site </span>
           </a>
         </p>
