--- a/terms-of-service.html
+++ b/terms-of-service.html
@@ -29,7 +29,7 @@
         <h1 class="my-8 max-w-full m-auto text-3xl md:text-4xl lg:text-5xl font-medium">Terms of service</h1>
         <p class="mt-1 lg:mt-4 max-w-lg m-auto leading-loose mb-6 text-left">The following terms and conditions (the
             “Terms”) govern all use of the trendydots.com website, and any other website or mobile device application
-            owned and operated by Trendy Dots e.U. or its affiliates (collectively, the “Site” or the “Sites”) and the
+            owned and operated by Cristian-Dan Bara e.U. or its affiliates (collectively, the “Site” or the “Sites”) and the
             non-paid and paid products and services available at the Sites (taken together with the Sites, the
             “Service”).
             Please read these terms and conditions carefully as your use of the Site is subject to them. Trendy Dots
