--- a/invest.html
+++ b/invest.html
@@ -103,7 +103,7 @@
       <a href="#contact-us" target="_self"
         class="btn bg-white border cursor-pointer no-underline text-grey-darkest font-bold py-2 px-4 mb-2 rounded-full shadow inline-flex items-center"
         style="border-color: pink;">
-        <span> Create your account </span>
+        <span> Request a demo </span>
       </a>
     </div>
 
@@ -196,9 +196,9 @@
 
 
   <!-- Form -->
-  <section id="contact-us" class="antialiased font-sans w-full text-left text-black py-2" id="subscribe-section"
+  <section id="contact-us" class="antialiased font-sans w-full text-left text-black py-2 bg-grey-lighter" id="subscribe-section"
     style="border-top: 1px solid #dddd; border-bottom: 1px solid #dddd">
-    <div class="container mx-auto max-w-xl font-normal leading-normal text-center lg:text-left ">
+    <div class="container mx-auto max-w-xl font-normal leading-normal text-center">
       <!-- contact form
       <div class="w-full flex flex-col text-center items-center justify-center">
         <div class="container mx-auto max-w-xl py-8 font-normal leading-normal text-center lg:text-left ">
@@ -267,9 +267,9 @@
       <h1 class="my-4 font-normal text-grey-darker">Interested in using the tool?
       </h1>
       <p class="">
-        Follow our Patreon posts to keep up with developments. Become a patron and get access to our project.
-        There's no strings attached. You can cancel any time.
+        Follow our twitter posts to keep up with developments. 
       </p> <br>
+  <!--
       <div class="container max-w-xl m-auto flex flex-wrap items-start justify-center">
         <div class="w-full md:w-1/2 lg:w-1/2 flex flex-col mb-8 px-3">
           <div class="overflow-hidden bg-white rounded-lg text-center">
@@ -319,12 +319,13 @@
           </div>
         </div>
       </div>
+      -->
       <div class="w-full flex flex-col text-center items-center justify-center mb-6">
-        <a class="btn bg-white border-2 border-red cursor-pointer no-underline text-grey-darkest font-bold py-2 px-4 mb-2 rounded-full shadow-lg"
-          href="https://www.patreon.com/bePatron?u=14590376" target="_blank" style="white-space: nowrap;">
-          <img src="../patreon-logo1.png" style="height: 1.5em; vertical-align: middle;" alt="">
+        <a class="btn bg-white border-2 border-blue cursor-pointer no-underline text-grey-darkest font-bold py-2 px-4 mb-2 rounded-full shadow-lg"
+          href="https://twitter.com/trendydots" target="_blank" style="white-space: nowrap;">
+          <img src="../twitter_black.png" style="height: 1em; vertical-align: middle;" alt="">
           &nbsp;
-          <span style="white-space: nowrap;"> Become a Patron</span>
+          <span style="white-space: nowrap;"> Follow us on twitter</span>
         </a>
       </div>
 
