--- a/twitpitch/index.html
+++ b/twitpitch/index.html
@@ -211,7 +211,7 @@
         $('#twitter_handel_text2').html(twitterHandel2)
       });
 
-      let problemStatement = '<b>problem statement</b>';
+      let problemStatement = '<b>Problem Statement</b>';
       let solutionStatement = '<b>I | We | Company Name</b> do <b>Solution Statement</b>';
       let impactStatement = '<b>Impact Statement</b>';
       let twitterHandel = '<b>@twitter handel</b>';
