--- a/twitpitch/index.html
+++ b/twitpitch/index.html
@@ -62,10 +62,10 @@
         </div>
     </header>
 
-    <section class="w-full pt-16">
-        <div class="relative w-full px-16 flex flex-col md:flex-row items-start">
-            <div class="w-full flex flex-col md:w-1/2 pr-4 items-center">
-                <form class="w-full rounded-xl shadow-lg overflow-hidden p-6 space-y-10 bg-white text-xl">
+    <section class="w-full pt-8">
+        <div class="relative w-full md:px-16 px-6 flex flex-col md:flex-row items-start">
+            <div class="w-full flex flex-col md:w-1/2 md:pl-0 px-4 items-center pt-8">
+                <form class="w-full rounded-xl shadow-lg overflow-hidden p-6 space-y-10 bg-white md:text-xl text-md">
                     <h2 class="text-2xl font-bold text-center">Build your pitch for twitter</h2>
                     <div class="w-full flex flex-row justify-start">
                         <section class="mr-4 whitespace-no-wrap"> When </section>
@@ -111,7 +111,7 @@
                     </div>
                 </form>
             </div>
-            <div class="w-full flex flex-col md:w-1/2 px-4 items-center">
+            <div class="w-full flex flex-col md:w-1/2 px-4 items-center pt-8">
 
                 <div class="container mx-auto bg-white shadow-lg rounded-xl p-16 text-center" style="font-size: 18px;">
                     <i class="fab fa-twitter text-blue-600" style="font-size: 24px;"></i>
@@ -124,12 +124,12 @@
                     <br><br>
                 </div>
                 <div class="container mx-auto flex flex-row justify-around mt-8">
-                    <a id="tweet-with-template" class="cursor-pointer flex items-center bg-gradient-to-r from-blue-400 to-blue-600 text-white font-bold uppercase px-6 py-3 rounded-full shadow hover:shadow-lg outline-none focus:outline-none mr-2 mb-1 text-lg"
+                    <a id="tweet-with-template" class="cursor-pointer flex items-center bg-gradient-to-r from-blue-400 to-blue-600 text-white font-bold uppercase px-6 py-3 rounded-full shadow hover:shadow-lg outline-none focus:outline-none mr-2 mb-1 md:text-lg text-sm"
                     style="transition: all .15s ease;">
                     Tweet your pitch
                   </a>
       
-                  <a id="copy-with-template" class="cursor-pointer flex items-center bg-gradient-to-r from-green-400 to-green-600 text-white font-bold uppercase px-6 py-3 rounded-full shadow hover:shadow-lg outline-none focus:outline-none mr-2 mb-1 text-lg"
+                  <a id="copy-with-template" class="cursor-pointer flex items-center bg-gradient-to-r from-green-400 to-green-600 text-white font-bold uppercase px-6 py-3 rounded-full shadow hover:shadow-lg outline-none focus:outline-none mr-2 mb-1 md:text-lg text-sm"
                   style="transition: all .15s ease;">
                     Copy to clipboard
                   </a>
@@ -140,12 +140,12 @@
     <a id='twitter-post' target="_blank" style="visibility: hidden; width: 1px;"></a>
 
     <section class="w-full mt-8">
-        <div class="relative w-full px-16 pb-8">
+        <div class="relative w-full md:px-16 px-6 pb-8">
             <div pazly-editable="bg"  class="relative flex md:flex-row flex-col-reverse justify-between items-start rounded-xl shadow-lg bg-orange-100">   
             <div  class="w-full flex flex-col md:w-6/12 md:px-24 px-4 md:py-12 md:items-start mb-16 md:mb-0 items-center">
             <img class="object-cover object-center flex-grow w-16 mb-8" src="https://pazly.dev/logo.png" />
-            <h1 class="title-font sm:text-4xl text-2xl mb-4 font-medium  text-black">Build websites for your ideas <br> Coding skills not needed</h1>
-            <p  class="mb-8 leading-relaxed  text-black">Drag and drop UI components and build beautiful responsive websites. Explore 3600+ web blocks combinations.</p>
+            <h1 class="title-font sm:text-4xl text-2xl mb-4 font-medium text-center md:text-left text-black">Build websites for your ideas. Coding skills not needed.</h1>
+            <p  class="mb-8 leading-relaxed text-center md:text-left text-black">Drag and drop UI components and build beautiful responsive websites. Explore 3600+ web blocks combinations.</p>
             <div  class="md:text-left text-center inline-flex">
             <a target="_blank " href="https://pazly.dev" class="font-bold px-6 py-4 rounded outline-none focus:outline-none my-2 border-2 border-gray-800 hover:border-gray-700 uppercase text-sm shadow hover:shadow-lg  text-white bg-blue-800" href>build your website today. Start free</a>
             </div>
