--- a/twitpitch/index.html
+++ b/twitpitch/index.html
@@ -155,7 +155,27 @@
             </div> 
             </div>
             </div>
-        </section>
+    </section>
+
+    <footer class="w-full font-sans pb-8 px-4" style="z-index: 4">
+      <div class="container mx-auto overflow-hidden flex flex-col md:flex-row justify-between items-center">
+        <p class="inline-block py-2 px-3 text-center md:text-left"> ©
+          <script>document.write(new Date().getFullYear());</script>
+          <strong class="">trendydots.com</strong>
+          All rights reserved.</p>
+  
+        <ul class="text-sm text-grey-dark list-reset flex items-center">
+          <li><a href="../privacy-statement.html" target="_blank" class="inline-block py-2 px-3 text-black">Privacy
+              statement</a></li>
+          <li><a href="../terms-of-service.html" target="_blank" class="inline-block py-2 px-3 text-black">Terms of
+              service</a>
+          </li>
+          <li><a href="../imprint.html" target="_blank" class="inline-block py-2 px-3 text-black">
+              Impressum</a>
+          </li>
+        </ul>
+      </div>
+    </footer>
     <!-- Pazly Components Ends Here -->
 
     <!-- AOS - animate on scroll initialization -->
