--- a/twitpitch/index.html
+++ b/twitpitch/index.html
@@ -316,18 +316,12 @@
     });
   </script>
 
-  <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-113784035-1"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-
-    function gtag() {
-      dataLayer.push(arguments);
-    }
-    gtag("js", new Date());
-
-    gtag("config", "UA-113784035-1");
-  </script>
+<!-- Analytics with Insights -->
+<script src="https://getinsights.io/js/insights.js"></script>
+<script>
+insights.init('MF5hq_FQd6a1it5e');
+insights.trackPages();
+</script>
 </body>
 
 </html>
