--- a/index.html
+++ b/index.html
@@ -217,29 +217,29 @@
       </div>
     </section>
 
-    <!-- NPL -->
-    <section
+      <!-- Tweet pitch -->
+      <section
       class="bg-white my-8 font-sans container max-w-xl m-auto flex flex-col-reverse lg:flex-row text-center lg:text-left sm:items-center">
       <div class="w-full lg:w-1/2 flex flex-col justify-center items-start p-8 items-center lg:items-start">
-        <label for="tagline" class="uppercase tracking-wide text-grey-dark font-bold">natural language
-          processing</label>
-        <h2 class="my-4 font-normal font-bold">td<span style="color:#F2D024">.</span> nlp research </h2>
+        <label for="tagline" class="uppercase tracking-wide text-grey-dark font-bold">social media startup pitch</label>
+        <h2 class="my-4 font-normal font-bold">td<span style="color:#F2D024">.</span> tweet pitch </h2>
         <p class="leading-normal mb-4 text-grey-darkest">
-          A series of experiments around AI text processing. Summarizing language independent texts, extracting tokens,
-          hashtag autosuggest and so much more.
+          What is a tweet pitch? A pitch optimised for twitter and other social media network posts. It typically consists of 140 to 280 characters.
           <br><br>
-          The first experiment automatically summarizes text..
+          Pitch your startup or business idea to the world with this super easy template. 
           <br><br>
           <a class="btn bg-white border cursor-pointer no-underline text-grey-darkest font-bold py-2 px-4 mb-2 rounded-full shadow-md md:shadow items-center"
-            href="/research/nlp/" target="_blank" style="white-space: nowrap; border-color: #F2D024;">
-            <span style="white-space: nowrap;"> Try for FREE </span>
+            href="/twitpitch/" target="_blank" style="white-space: nowrap; border-color: #F2D024;">
+            <span style="white-space: nowrap;"> Use for FREE </span>
           </a>
         </p>
       </div>
       <div class="w-full lg:w-1/2">
-        <img src="./inE1.png" class="shadow-md rounded" alt="" />
+        <img src="./twp1.png" class="shadow-md rounded" alt="" />
       </div>
     </section>
+
+ 
 
     <!-- Trends -->
     <section
@@ -266,9 +266,36 @@
       </div>
     </section>
 
+       <!-- NPL -->
+       <section
+       class="bg-white my-8 font-sans container max-w-xl m-auto flex flex-col-reverse lg:flex-row text-center lg:text-left sm:items-center">
+       <div class="w-full lg:w-1/2 flex flex-col justify-center items-start p-8 items-center lg:items-start">
+         <label for="tagline" class="uppercase tracking-wide text-grey-dark font-bold">natural language
+           processing</label>
+         <h2 class="my-4 font-normal font-bold">td<span style="color:#F2D024">.</span> nlp research </h2>
+         <p class="leading-normal mb-4 text-grey-darkest">
+           A series of experiments around AI text processing. Summarizing language independent texts, extracting tokens,
+           hashtag autosuggest and so much more.
+           <br><br>
+           The first experiment automatically summarizes text..
+           <br><br>
+           <a class="btn bg-white border cursor-pointer no-underline text-grey-darkest font-bold py-2 px-4 mb-2 rounded-full shadow-md md:shadow items-center"
+             href="/research/nlp/" target="_blank" style="white-space: nowrap; border-color: #F2D024;">
+             <span style="white-space: nowrap;"> Try for FREE </span>
+           </a>
+         </p>
+       </div>
+       <div class="w-full lg:w-1/2">
+         <img src="./inE1.png" class="shadow-md rounded" alt="" />
+       </div>
+     </section>
+
     <!-- Oskar -->
     <section
       class="bg-white my-8 font-sans container max-w-xl m-auto flex flex-col-reverse lg:flex-row text-center lg:text-left sm:items-center">
+      <div class="w-full lg:w-1/2">
+        <img src="./osk-big.png" class="shadow-md rounded" alt="" />
+      </div>
       <div class="w-full lg:w-1/2 flex flex-col justify-center items-start p-8 items-center lg:items-start">
         <label for="tagline" class="uppercase tracking-wide text-grey-dark font-bold">Recommendation AI
           (concept)</label>
@@ -282,10 +309,7 @@
             <span style="white-space: nowrap;"> Details </span>
           </a>
         </p>
-      </div>
-      <div class="w-full lg:w-1/2">
-        <img src="./osk-big.png" class="shadow-md rounded" alt="" />
-      </div>
+      </div> 
     </section>
 
     <!-- Voluteering-->
