--- a/invest/getting-started.html
+++ b/invest/getting-started.html
@@ -52,8 +52,8 @@
   box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
     max-width: 100%; position: fixed; top: 0; z-index: 100; 
 ">
-    <span class="flex items-center">
-      <a href="https://trendydots.com" class="block text-left" target="_blank">
+    <span class="flex items-center align-middle">
+      <a href="https://trendydots.com" class="flex text-left" target="_blank">
         <img src="assets/img/logo.png" class="h-8 sm:h-8 rounded-full" alt="logo" />
       </a>
       &nbsp;
@@ -65,15 +65,6 @@
 
 
     <ul class="md:text-sm text-xs text-grey-dark list-reset flex items-center flex-row">
-      <li>
-        <a class="btn bg-white border border-red cursor-pointer no-underline text-grey-darkest font-bold py-2 px-4 mx-4 mb-2 rounded-full shadow inline-flex items-center"
-          href="https://www.patreon.com/bePatron?u=14590376" target="_blank">
-          <img src="../patreon-logo1.png" style="height: 1.5em; vertical-align: middle;" alt="">
-          &nbsp;
-          <span> Become a patron</span>
-        </a>
-      </li>
-
       <li>
         <a href="https://www.paypal.me/trendydots" target="_blank"
           class="btn bg-white border border-blue cursor-pointer no-underline text-grey-darkest font-bold py-2 px-4 mb-2 rounded-full shadow inline-flex items-center">
