--- a/twitpitch/index.html
+++ b/twitpitch/index.html
@@ -147,7 +147,7 @@
             <h1 class="title-font sm:text-4xl text-2xl mb-4 font-medium text-center md:text-left text-black">Build websites for your ideas. Coding skills not needed.</h1>
             <p  class="mb-8 leading-relaxed text-center md:text-left text-black">Drag and drop UI components and build beautiful responsive websites. Explore 3600+ web blocks combinations.</p>
             <div  class="md:text-left text-center inline-flex">
-            <a target="_blank " href="https://pazly.dev" class="font-bold px-6 py-4 rounded outline-none focus:outline-none my-2 border-2 border-gray-800 hover:border-gray-700 uppercase text-sm shadow hover:shadow-lg  text-white bg-blue-800" href>build your website today. Start free</a>
+            <a target="_blank " href="https://pazly.dev/?via=trendydots" class="font-bold px-6 py-4 rounded outline-none focus:outline-none my-2 border-2 border-gray-800 hover:border-gray-700 uppercase text-sm shadow hover:shadow-lg  text-white bg-blue-800" href>build your website today. Start free</a>
             </div>
             </div>
             <div  class="w-full md:w-6/12">
