added image prop for open grph

--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <meta http-equiv="PRAGMA" content="NO-CACHE">
   <title>trendy dots</title>
-  <meta name="author" content="Cristian-Dan Baras">
+  <meta name="author" content="Cristian-Dan Bara">
   <meta name="description"
     content="Trendy Dots is a project developing fun applications for data science, data visualization and user experience." />
   <meta name="keywords" content="digital lab, exploratory data analysis, behavioural economics, trend analysis" />
   <meta property="og:title" content="Trendy Dots" />
   <meta property="og:description"
     content="Trendy Dots is a project developing fun applications for data science, data visualization and user experience. " />
-  <meta property="og:image" content="./1.png" />
+  <meta property="og:image" content="https://trendydots.com/1.png" />
 
   <link rel="shortcut icon" href="logo.png">
 
