fixed meta image

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <meta property="og:title" content="Trendy Dots" />
   <meta property="og:description"
     content="Trendy Dots is a project developing fun applications for data science, data visualization and user experience. " />
-  <meta property="og:image" content="https://trendydots.com/1.png" />
+  <meta name="image" property="og:image" content="https://trendydots.com/1.png" />
 
   <link rel="shortcut icon" href="logo.png">
 
