--- a/privacy-statement.html
+++ b/privacy-statement.html
@@ -104,7 +104,7 @@
       our order, we conclude a processor agreement to ensure the same level of security and confidentiality of your
       data. Trendy Dots shares (only the required personal) data with the following third parties: <br />
       <i>
-        &nbsp;&nbsp; • Google Analytics: count user access and behaviur on this website <br />
+        &nbsp;&nbsp; • Google Analytics: count user access and behaviur on this website using Google reCAPTCHA; Google Tag Manager; <br />
         &nbsp;&nbsp; • Hotjar: to see overall user behavior on this website <br />
         &nbsp;&nbsp; • Gmail: for communicating via email <br />
         &nbsp;&nbsp; • Basin: to collect subscriptions from Trendy Dot’s websites <br />
@@ -113,7 +113,7 @@
         &nbsp;&nbsp; • Patreon: to receive your donations which help us build and expand our software <br />
         &nbsp;&nbsp; • Buy me a coffee: to receive your donations which help us build and expand our software <br />
         &nbsp;&nbsp; • Firebase: (https://firebase.google.com/) to handle user authentication and data management in our digital services <br />
-
+        &nbsp;&nbsp; • JSDELIVR: content delivery network which delivers popular javascript libraries used for the websites' user experience <br />
       </i>
     </p>
 
