--- a/index.html
+++ b/index.html
@@ -148,14 +148,8 @@
             </div>
             <div class="flex flex-col justify-center text-left px-4">
               <h3 class="mb-2"> 2. will it work online? - web development </h3>
-              <p class="leading-normal mb-2 text-grey-darkest" style="font-weight: 300;">
-                A large part of my ambition is to create a toolset the functions 100% online, without the need for
-                complicated
-                installations, or configurations.
-                Depending on your donations, the toolset will be freely available, ad free, accessible to as many users
-                as
-                possible.
-              </p>
+              <p class="leading-normal mb-2 text-grey-darkest" style="font-weight: 300;"> A large part of my ambition is to create a toolset the functions 100% online, without the need for complicated installations, or configurations. 
+                The toolset will be long-term available, ad free, accessible to as many users as possible. </p>
             </div>
           </div>
 
@@ -166,9 +160,7 @@
             <div class="flex flex-col justify-center text-left px-4">
               <h3 class="mb-2"> 3. can I do better? - analytics and feedback based improvements </h3>
               <p class="leading-normal mb-2 text-grey-darkest" style="font-weight: 300;">
-                Here is where your opinions and contributions are put to good use. I encourage you to become an active
-                <b>patron</b>
-                Please write your feedback and improvement suggestions. I will consider your desired changes.
+                After the launch, I look at quantitative and qualitative parameters and KPIs to understand adoption, successful features, defects and imptovement oportunitites. I then updates the projects on a iterative, recurrect basis. 
               </p>
             </div>
           </div>
