--- a/index.html
+++ b/index.html
@@ -184,11 +184,31 @@
   <!-- features-1 -->
   <div class="w-full" style="background: #fff; padding-bottom: 20px;">
 
+    <!-- Tweet pitch -->
+    <section
+    class="bg-white my-8 font-sans container max-w-xl m-auto flex flex-col-reverse lg:flex-row text-center lg:text-left sm:items-center">
+    <div class="w-full lg:w-1/2 flex flex-col justify-center items-start p-8 items-center lg:items-start">
+      <label for="tagline" class="uppercase tracking-wide text-grey-dark font-bold">online reputation management</label>
+      <h2 class="my-4 font-normal font-bold">td<span style="color:#37daae">.</span> Stealth Product</h2>
+      <p class="leading-normal mb-4 text-grey-darkest">
+        Redefine the way your independent specialist medical practice operates. Building a revolutionary Software as a Service (SaaS) solution tailored to enhance your online reputation, ensure seamless availability, and elevate the quality of service you provide.
+        <br><br>
+        <a class="btn bg-white border cursor-pointer no-underline text-grey-darkest font-bold py-2 px-4 mb-2 rounded-full shadow-md md:shadow items-center"
+          target="_self" style="white-space: nowrap; border-color: #37daae;">
+          <span style="white-space: nowrap;"> Coming Soon </span>
+        </a>
+      </p>
+    </div>
+    <div class="w-full lg:w-1/2">
+      <img src="https://medrepute.netlify.app/1.jpg" class="" alt="" />
+    </div>
+  </section>
+
     <!-- Pazly-->
     <section
       class="bg-white mb-8 font-sans container max-w-xl m-auto flex flex-col lg:flex-row text-center lg:text-left sm:items-center">
       <div class="w-full lg:w-1/2">
-        <img class="shadow-md rounded" src="https://pazly.dev/laptop1.jpg" alt="" />
+        <img class="" src="https://pazly.dev/laptop9.png" alt="" />
       </div>
       <div class="w-full lg:w-1/2 flex flex-col justify-center items-start p-8 items-center lg:items-start">
         <label for="tagline" class="uppercase tracking-wide text-grey-dark font-bold">web development</label>
@@ -230,8 +250,6 @@
         <img src="./twp1.png" class="shadow-md rounded" alt="" />
       </div>
     </section>
-
- 
 
     <!-- Trends -->
     <section
