switched to portfolio

--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
     <div class="text-center">
       <h1 class="my-4 font-normal" style="font-weight: 700;
       font-size: 6vh; color:#757575">the <span class="font-bold text-black">td<span
-            style="color:#F2D024">.</span></span> toolset
+            style="color:#F2D024">.</span></span> portfolio
       </h1>
     </div>
   </section>
