--- a/index.html
+++ b/index.html
@@ -107,10 +107,11 @@
     </div>
     <div class="w-full md:w-1/2 flex flex-col overflow-hidden items-center">
       <img src="./11.png" alt="" />
+      <!-- 
       <a href="https://twitter.com/trendydots" class="mt-4" target="_blank" style="text-decoration: none; color: black">
-        <img src="twitter_black.png" style="vertical-align: middle; height: 1em">
-        @trendydots
+        <img src="twitter_black.png" style="vertical-align: middle; height: 1em" /> @trendydots
       </a>
+      -->
     </div>
   </section>
 
