chaged header layout

--- a/index.html
+++ b/index.html
@@ -86,21 +86,19 @@
 
   <!-- the story -->
   <section
-    class="bg-white font-sans w-full flex flex-col-reverse md:flex-row text-center md:text-left justify-between mt-16 pt-8 md:mt-0 md:pt-0">
-    <div class="w-full md:w-1/2 rounded flex flex-col justify-between items-start items-center md:items-start" style="z-index:2; padding: 2%; padding-left: 6%; padding-right: 6%; 
-      ">
+    class="bg-white font-sans w-full flex flex-col-reverse md:flex-row text-center md:text-left justify-between mt-10 pt-8 md:mt-0 md:pt-0">
+    <div class="w-full md:w-1/2 rounded flex flex-col justify-between items-start items-center md:items-start" style="z-index:2; padding: 2%; padding-left: 6%; padding-right: 6%;">
       <br><br><br>
       <div>
-        <h1 class="my-4 font-normal" style="font-weight: 700; margin-bottom: 2rem;
-      font-size: 8vh; color: #757575">the story</h1>
+        <h1 class="my-4 font-normal" style="font-weight: 700; margin-bottom: 2rem; font-size: 6vh; color: #757575">the story</h1>
         <p class="leading-normal mb-2 text-base md:text-lg xl:text-xl ">
           Trendy Dots is an initiative developing fun applications for UX/UI, data science, data visualization and web
           development.
           I playfully apply UX and data science best practices to big data, aiming to produce high value tools.
         </p>
-        <p class="leading-normal mb-4 text-center ">
+        <p class="leading-normal mb-4 text-center md:text-right md:-mr-32">
           <a target="_blank" href="/me">
-            <img src="./cris.png" style="max-height: 150px; min-height: 100px;" alt="">
+            <img src="./cris.png" style="max-height: 150px; min-height: 100px;" class="rounded-full" alt="">
           </a>
         </p>
       </div>
@@ -117,7 +115,7 @@
 
   <!-- workflow-->
   <section class="bg-white font-sans w-full flex flex-col text-center lg:text-left justify-between"
-    style="margin-top: 20px;">
+    style="margin-top: 5px;">
 
     <div class="w-full rounded flex flex-col justify-between items-center lg:items-start bg-white" style="z-index:2; padding: 2%; padding-left: 6%; padding-right: 6%;
       ">
